--- a/Views/ProjectDetails/Table.cshtml
+++ b/Views/ProjectDetails/Table.cshtml
@@ -69,8 +69,8 @@
 
 
     <div style="margin-left: 980px"class="view d-flex">
-        <button type="button" class="btb btn-dark">Gallery</button>&nbsp;
-        <button type="button" class="btb btn-dark">Table</button>
+        <a asp-controller="ProjectDetails" asp-action="Projects" type="button" class="btb btn-dark">Gallery</a>&nbsp;
+        <button asp-controller="ProjectDetails" asp-action="Table" type="button" class="btb btn-dark">Table</button>
     </div>
 
 <table class="table table-bordered table-striped" style="width:100%":>
