--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -149,7 +149,7 @@
     </footer>*@
      <footer style="position: relative"class="footer" id="footer">
 
-  <span class="col">
+  <span style="margin-left: 20px"class="col">
     <h3 class="col-title">Quick Links</h3>
     <nav class="col-list">
       <ul>
@@ -163,6 +163,7 @@
   </span>
   <span class="col">
           <div >
+
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="https://www.interrait.com/sites/default/files/logo_opt.png" />
                 </a>
@@ -261,9 +262,7 @@ Tel: 289-695-5687"><i class="bi bi-geo-alt-fill"></i>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-   
-    
+ 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
