added search functionality

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -216,7 +216,7 @@ India
 Tel: 033-44031100
 Fax: 033-23573847"><i class="bi bi-geo-alt-fill"></i>
                                 Kolkata
-                            </p> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp;
+                            </p> &nbsp &nbsp &nbsp &nbsp &nbsp
                             <p   data-bs-toggle="tooltip" data-bs-placement="top" title="9225 Leslie Street
 Suite 201
 Richmond Hill
