--- a/Views/ProjectDetails/Create.cshtml
+++ b/Views/ProjectDetails/Create.cshtml
@@ -5,12 +5,12 @@
     <div style="justify-content: space-between;"class="d-flex border p-3 mt-4">    
         <div class="row pb-4">
             <h2 class="text-primary">
-                Create Category
+                Create Project
             </h2>
             <hr />
             </div>
         <div class="pb-4">
-            <a asp-controller="ProjectDetails" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="User" asp-action="AddUser" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> &nbsp;
                 Add Members</a>
         </div>
