--- a/Views/Upload/Upload.cshtml
+++ b/Views/Upload/Upload.cshtml
@@ -8,12 +8,12 @@
             <hr />
             </div>
 
-            <div asp-validation-summary="ModelOnly"></div>
+         @*   <div asp-validation-summary="ModelOnly"></div>
             <div class="mb-3">
                <label asp-for="Document_Name"></label>
                   <input asp-for="Document_Name" class="form-control"/>
                   <span asp-validation-for="Document_Name" class="text-danger"></span>
-            </div>
+            </div>*@
             
 
       <input type="file" name="files" multiple required />
