--- a/Views/Upload/Delete.cshtml
+++ b/Views/Upload/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model Documents
+﻿@model Documents
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="Document_Id" hidden />
@@ -31,4 +31,4 @@
         </div>
         </div>
 
-</form>*@
+</form>
