--- a/Views/ProjectDetails/Create.cshtml
+++ b/Views/ProjectDetails/Create.cshtml
@@ -1,4 +1,43 @@
-﻿@model Document_Saver.Models.ProjectDetails
+﻿@model Document_Saver.Models.ProjectDetails 
+
+
+
+
+                <!-- Include Twitter Bootstrap and jQuery: -->
+    @*    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>*@
+
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js" defer></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+ 
+        <!-- Include the plugin's CSS and JS: -->
+        @*<script type="text/javascript" src="js/bootstrap-multiselect.js"></script>
+        <link rel="stylesheet" href="css/bootstrap-multiselect.css" type="text/css"/>
+
+
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+ 
+ 
+ 
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+ 
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+ 
+ 
+ 
+        <link rel="stylesheet" href="css/bootstrap-multiselect/bootstrap-multiselect.css" type="text/css">
+        
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        
+        <script type="text/javascript" src="js/bootstrap-multiselect/bootstrap-multiselect.js"></script>*@
+
 
 
 <form method="post" asp-action="Create">
@@ -7,13 +46,20 @@
             <h2 class="text-primary">
                 Create Project
             </h2>
-            <hr />
+           
             </div>
-        <div class="pb-4">
-            <a asp-controller="User" asp-action="AddUser" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> &nbsp;
-                Add Members</a>
+
+            <div class="pb-4">
+            <select   id="example-getting-started" multiple="true">
+                <option value="cheese">Cheese</option>
+                <option value="tomatoes">Tomatoes</option>
+                <option value="mozarella">Mozzarella</option>
+                <option value="mushrooms">Mushrooms</option>
+                <option value="pepperoni">Pepperoni</option>
+                <option value="onions">Onions</option>
+            </select>
         </div>
+        
         </div>
            @* <div asp-validation-summary="ModelOnly"></div>*@
             <div class="mb-3">
@@ -75,4 +121,14 @@
         <partial name="_ValidationScriptsPartial"></partial>
     }
 }
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#example-getting-started').select2({
+            placeholder : "Select User",
+            tags : true,
+            tokenSeparators: ['/',',',';'," "]
+        });
+    });
+</script>
+
 
