--- a/Views/Upload/Delete.cshtml
+++ b/Views/Upload/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Documents
 
-<form method="post" asp-action="DeletePost">
+<form method="post" >
     <input asp-for="Document_Id" hidden />
     <div class="border p-3 mt-4">    
         <div class="row pb-4">
