--- a/Views/Upload/Index.cshtml
+++ b/Views/Upload/Index.cshtml
@@ -195,7 +195,10 @@
                       
                        </td>
                     <td>
-                     <a asp-action="Delete" asp-controller="Upload" asp-route-Document_Id="@obj.Document_Id" class="btn btn-danger mx-2">Delete<i class="bi bi-trash"></i></a>
+                     <div class=w-75 btn-group" role="group">
+                        <a asp-action="Delete" asp-controller="Upload" asp-route-Id="@obj.Document_Id" class="btn btn-danger mx-2">Delete<i class="bi bi-trash"></i></a>
+
+                    </div>
                     </td>
                 </tr>
             }
