--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -50,6 +50,12 @@
                 <span asp-validation-for="User_Emp_Id" class="text-danger"></span>
 
             </div>
+            @* <div class="input-box">
+               <label asp-for="Role" class="details">Role</label>
+                <input asp-for="Role"placeholder="Enter your Role" class="form-control"/>
+                <span asp-validation-for="Role" class="text-danger"></span>
+
+            </div>*@
             
 
         
