--- a/Views/Upload/Index.cshtml
+++ b/Views/Upload/Index.cshtml
@@ -1,4 +1,18 @@
-﻿
+﻿<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>CodeMag JWT Demo</title>
+</head>
+
+<body>
+  @{
+      ViewBag.Title = "Demonstrating JWTs in ASP.NET Core MVC 5";
+  }
+
+  <p>You're logged in as:&nbsp;@User.Identity.Name</p>
+  <p>@ViewBag.Message</p>
+</body>
+</html>
 <link  href="~/css/Projects.css" rel="stylesheet"/>
 <script src = "~/js/Project.js"></script>
 <!doctype html>
