--- a/Views/Upload/Upload.cshtml
+++ b/Views/Upload/Upload.cshtml
@@ -1,4 +1,19 @@
 ﻿@model Documents
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>CodeMag JWT Demo</title>
+</head>
+
+<body>
+  @{
+      ViewBag.Title = "Demonstrating JWTs in ASP.NET Core MVC 5";
+  }
+
+  <p>You're logged in as:&nbsp;@User.Identity.Name</p>
+  <p>@ViewBag.Message</p>
+</body>
+</html>
 <form method="post" asp-action="Upload" enctype="multipart/form-data">
     <div class="border p-3 mt-4">    
         <div class="row pb-4">
