--- a/Views/User/MainWindow.cshtml
+++ b/Views/User/MainWindow.cshtml
@@ -1,4 +1,6 @@
-﻿<html>
+﻿@model User
+
+<html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>CodeMag JWT Demo</title>
@@ -67,7 +69,7 @@
                 <span>Projects</span></a>
             </li>
             <li class="nav-item">
-              <a asp-controller="Upload" asp-action="Upload" class="d-flex align-items-center nav-link"><i class="fa fa-square-o" aria-hidden="true"></i>
+              <a asp-controller="Upload" asp-action="Index" class="d-flex align-items-center nav-link"><i class="fa fa-square-o" aria-hidden="true"></i>
                 <span>Documents</span></a>
             <li class="nav-item">
               <a href="#" class="d-flex align-items-center nav-link"><i class="fa fa-cog" aria-hidden="true"></i>
