--- a/Views/Upload/Index.cshtml
+++ b/Views/Upload/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<html>
+﻿<@*html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>CodeMag JWT Demo</title>
@@ -12,7 +12,7 @@
   <p>You're logged in as:&nbsp;@User.Identity.Name</p>
   <p>@ViewBag.Message</p>
 </body>
-</html>
+</html>*@
 <link  href="~/css/Projects.css" rel="stylesheet"/>
 <script src = "~/js/Project.js"></script>
 <!doctype html>
