--- a/Views/Upload/Upload.cshtml
+++ b/Views/Upload/Upload.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Documents
-<html>
+@*<html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>CodeMag JWT Demo</title>
@@ -13,7 +13,7 @@
   <p>You're logged in as:&nbsp;@User.Identity.Name</p>
   <p>@ViewBag.Message</p>
 </body>
-</html>
+</html>*@
 <form method="post" asp-action="Upload" enctype="multipart/form-data">
     <div class="border p-3 mt-4">    
         <div class="row pb-4">
